--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>1D Cellular Automana</title>
+        <title>1D Cellular Automata</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="top">
             <a>Back</a>
             <a> | </a>
-            <a>1D Cellular Automana - <a href="https://github.com/GreyBeard42/cellularautomana">Github</a></a>
+            <a>1D Cellular Automata - <a href="https://github.com/GreyBeard42/cellularautomana">Github</a></a>
             <a> - <button onclick="reset()">Restart</button> - Rule: <input id="userrule" type=number value=110> - Speed <input id="speed" type=number value=40></a>
             <a style="float: right;">March 8th, 2025</a>
         </div>
